# petri-world

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md
crates/petri_app/: Cargo.toml
crates/petri_app/src/: main.rs
crates/petri_ga/: Cargo.toml
crates/petri_ga/benches/: ga_benchmark.rs
crates/petri_ga/src/: chromosome.rs  crossover.rs  individual.rs  lib.rs  mutation.rs  selection.rs  statistics.rs
crates/petri_nn/: Cargo.toml
crates/petri_nn/benches/: nn_benchmark.rs
crates/petri_nn/src/: lib.rs
crates/petri_rand/: Cargo.toml
crates/petri_rand/benches/: rand_benchmark.rs
crates/petri_rand/src/: entropy.rs  gen.rs  lib.rs
crates/petri_simulation/: Cargo.toml
crates/petri_simulation/src/: brain.rs  creature.rs  creature_individual.rs  eye.rs  food.rs  lib.rs  materials.rs  mesh.rs  simulation.rs  utils.rs
docs/: LICENSE-APACHE
