[package]
name = "petri_ga"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petri_rand = { path = "../petri_rand" }

[dev-dependencies]
approx = "0.4"
criterion = "0.3"

[[bench]]
name = "ga_benchmark"
harness = false
