[package]
name = "petri_rand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = "0.1"

[dev-dependencies]
criterion = "0.3"
fastrand = "1.6"
wyhash = "0.5.0"
rand = "0.8"

[[bench]]
name = "rand_benchmark"
harness = false
