[package]
name = "petri_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch="main" }
petri_rand = { path = "../petri_rand" }
petri_nn = { path = "../petri_nn" }
petri_ga = { path = "../petri_ga" }

[dev-dependencies]
test-case = "1.2"
